--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,8 @@ dependencies:
   camera: ^0.11.2
   dio: ^5.9.0
   image_picker: ^1.1.2
-  tflite_flutter: ^0.11.0
   image: ^4.5.4
+  url_launcher: ^6.3.1
   
 
 
